<resources>
    <string name="app_name">AutoSellerManagement</string>
    <string name="Clientes">Clientes</string>
    <string name="Presupuestos">Presupuesto\n</string>
    <string name="PRESUPUESTO">Presupuesto</string>
    <string name="Estado">Estado</string>
    <string name="rEGISTRO">Registro</string>
    <string name="Vehiculo">Vehiculo</string>
    <string name="comentarios">Comentarios</string>
    <string name="cambio">Cambio Contraseña</string>
    <string name="cambioCon">Cambio Contraseña</string>
    <string name="campoobligatorio">* Campo obligatorio</string>
    <string name="usuario">Introduce nombre usuario</string>
    <string name="contraseña">Introduce contraseña</string>
    <string name="introducecontraseñanueva">Introduce contraseña nueva</string>
    <string name="referencia">Referencia presupuesto</string>
    <string name="vendedor">* Introduce nombre usuario registrado</string>
    <string name="vendedor2">Nombre usuario vendedor</string>
    <string name="imatricula">* Introduce matricula registrada</string>
    <string name="matricula">Matricula vehiculo</string>
    <string name="itelefono">* Introduce telefono de cliente registrado</string>
    <string name="telefono">Telefono cliente</string>
    <string name="precio">Precio presupuestado venta</string>
    <string name="fecha">fecha presupuesto</string>
    <string name="marca">Marca vehiculo</string>
    <string name="modelo">Modelo vehiculo</string>
    <string name="anio">Año matriculacion</string>
    <string name="km">Km vehiculo</string>
    <string name="precio2">Precio compra</string>
    <string name="emaIL">Introduce email</string>
    <string name="cerrar">CERRAR SESION</string>
    <string name="Informacion">INFORMACION Y GUIA USUARIO</string>
    <string name="informacion">Informacion y guia de usuario</string>
    <string name="Guia">Guia de Usuario</string>
    <string name="pulsa">* pulsa en la imagen para abrir guia de usuario</string>
    <string name="version">Informacion APP</string>
    <string name="ve">Version 1.0\nAuthor: Fernando Garzon</string>
    <string name="contacto">Contacta con nosotros</string>
    <string name="asunto">Asunto</string>
    <string name="memsaje">Mensaje</string>
    <string name="telefono2">Introduce telefono de contacto</string>
    <string name="enviar">Enviar</string>
</resources>