<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    android:orientation="vertical"
    tools:context=".Contacto">

    <TextView
        android:id="@+id/textView16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:text="@string/contacto"
        android:textColor="@color/black"
        android:textSize="34sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextASuntoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:textColorHint="@color/hint"
        app:endIconMode="clear_text"
        app:helperText="@string/campoobligatorio"
        app:helperTextTextColor="@color/hint"
        app:startIconDrawable="@drawable/baseline_article_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextAsunto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/asunto"
            android:textColor="@color/black"
            android:textColorHint="@color/hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextMensajeLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:textColorHint="@color/hint"
        app:endIconMode="clear_text"
        app:helperText="@string/campoobligatorio"
        app:helperTextTextColor="@color/hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextMensaje"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:hint="@string/memsaje"
            android:textColor="@color/black"
            android:textColorHint="@color/hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextContactoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:textColorHint="@color/hint"
        app:endIconMode="clear_text"
        app:helperText="@string/campoobligatorio"
        app:helperTextTextColor="@color/hint"
        app:startIconDrawable="@drawable/baseline_phone_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono2"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="@color/hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonEnviarMailCOntacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/botones"
        android:text="@string/enviar"
        android:textColor="@color/white" />
</LinearLayout>