<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    android:orientation="vertical"
    tools:context=".PresupuestosActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:text="@string/PRESUPUESTO"
                android:textColor="@color/black"
                android:textSize="34sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextReferencialayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:textColorHint="@color/hint"
                app:endIconMode="clear_text"
                app:helperText="@string/campoobligatorio"
                app:helperTextTextColor="@color/hint"
                app:startIconDrawable="@drawable/baseline_data_usage_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextReferencia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/referencia"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextVendedorlayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:textColorHint="@color/hint"
                app:endIconMode="clear_text"
                app:helperText="@string/vendedor"
                app:helperTextTextColor="@color/hint"
                app:startIconDrawable="@drawable/baseline_person_2_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextVendedor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/vendedor2"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextMatriculaVehiculolayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:textColorHint="@color/hint"
                app:endIconMode="clear_text"
                app:helperText="@string/imatricula"
                app:helperTextTextColor="@color/hint"
                app:startIconDrawable="@drawable/baseline_directions_car_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextMatriculaVehiculo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/matricula"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextClientelayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:textColorHint="@color/hint"
                app:endIconMode="clear_text"
                app:helperText="@string/itelefono"
                app:helperTextTextColor="@color/hint"
                app:startIconDrawable="@drawable/baseline_phone_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextCliente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/telefono"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:textColorHint="@color/hint"
                app:endIconMode="clear_text"
                app:helperText="@string/campoobligatorio"
                app:helperTextTextColor="@color/hint"
                app:startIconDrawable="@drawable/baseline_attach_money_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPVP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/precio"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:gravity="center"
                    android:text="@string/Estado"
                    android:textColor="@color/hint"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/editTextEstado"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="20dp"
                    android:gravity="right" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editTextFechalayout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="left|center_vertical"
                    android:layout_marginLeft="20dp"
                    android:textColorHint="@color/hint"
                    app:helperText="@string/campoobligatorio"
                    app:helperTextTextColor="@color/hint"
                    app:startIconDrawable="@drawable/baseline_calendar_month_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextFecha"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:editable="false"
                        android:hint="@string/fecha"
                        android:textColor="@color/hint" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/buttonFecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="20dp"
                    android:backgroundTint="@color/botones"
                    android:gravity="center"
                    android:text="Fecha"
                    android:textColor="@color/white" />
            </LinearLayout>

            <EditText
                android:id="@+id/editTextComentarios"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/comentarios"
                android:inputType="textMultiLine"
                android:textColor="@color/black"
                android:textColorHint="@color/hint" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/insertarPedido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:backgroundTint="@color/botones"
                    android:gravity="left"
                    android:text="Insertar"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/consultarPedido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:backgroundTint="@color/botones"
                    android:gravity="right"
                    android:text="Consultar"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/actualizarPedido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:backgroundTint="@color/botones"
                    android:gravity="center_horizontal"
                    android:text="Actualizar"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>