<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    android:orientation="vertical"
    tools:context=".Registro">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/rEGISTRO"
        android:textColor="@color/black"
        android:textSize="34sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usuarioRegistrolayaout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:textColorHint="@color/hint"
        app:endIconMode="clear_text"
        app:helperText="@string/campoobligatorio"
        app:helperTextTextColor="@color/hint"
        app:startIconDrawable="@drawable/baseline_person_2_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usuarioRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usuario"
            android:textColor="@color/black"
            android:textColorHint="@color/hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contraseñaRegistrolayaout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:textColorHint="@color/hint"
        app:endIconMode="password_toggle"
        app:helperText="@string/campoobligatorio"
        app:helperTextTextColor="@color/hint"
        app:startIconDrawable="@drawable/baseline_password_24">

        <EditText
            android:id="@+id/contraseñaRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/contraseña"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailRegistrolayaout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:textColorHint="@color/hint"
        app:endIconMode="clear_text"
        app:helperText="@string/campoobligatorio"
        app:helperTextTextColor="@color/hint"
        app:startIconDrawable="@drawable/baseline_alternate_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emaIL"
            android:textColor="@color/black"
            android:textColorHint="@color/hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="100dp"
        android:backgroundTint="@color/botones"
        android:text="Registro"
        android:textColor="@color/white" />

</LinearLayout>