<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    android:orientation="vertical"
    tools:context=".VehiculoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:text="@string/Vehiculo"
                android:textColor="@color/black"
                android:textSize="34sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextMatriculalayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:textColorHint="@color/hint"
                app:endIconMode="clear_text"
                app:helperText="@string/campoobligatorio"
                app:helperTextTextColor="@color/hint"
                app:startIconDrawable="@drawable/baseline_directions_car_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextMatricula"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/matricula"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextMarcalayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:textColorHint="@color/hint"
                app:endIconMode="clear_text"
                app:helperText="@string/campoobligatorio"
                app:helperTextTextColor="@color/hint"
                app:startIconDrawable="@drawable/baseline_article_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextMarca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/marca"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextModelolayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:textColorHint="@color/hint"
                app:endIconMode="clear_text"
                app:helperText="@string/campoobligatorio"
                app:helperTextTextColor="@color/hint"
                app:startIconDrawable="@drawable/baseline_article_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextModelo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/modelo"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextMatriculacionlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:textColorHint="@color/hint"
                app:endIconMode="clear_text"
                app:helperText="@string/campoobligatorio"
                app:helperTextTextColor="@color/hint"
                app:startIconDrawable="@drawable/baseline_calendar_month_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextMatriculacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/anio"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextkmlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:textColorHint="@color/hint"
                app:endIconMode="clear_text"
                app:helperText="@string/campoobligatorio"
                app:helperTextTextColor="@color/hint"
                app:startIconDrawable="@drawable/baseline_data_object_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextkm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/km"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextPreciolayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:textColorHint="@color/hint"
                app:endIconMode="clear_text"
                app:helperText="@string/campoobligatorio"
                app:helperTextTextColor="@color/hint"
                app:startIconDrawable="@drawable/baseline_attach_money_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPrecio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/precio2"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/insertarVehiculo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:backgroundTint="@color/botones"
                    android:gravity="left"
                    android:text="Insertar"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/consultarVehiculo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:backgroundTint="@color/botones"
                    android:gravity="center_horizontal"
                    android:text="Consultar"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/actualizarVehiculo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:backgroundTint="@color/botones"
                    android:gravity="right"
                    android:text="Actualizar"
                    android:textColor="@color/white" />
             </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>